--- a/index.html
+++ b/index.html
@@ -32,6 +32,20 @@
 </head>
 <body>
   <h1>Buffalo Ridge Podcast</h1>
-  <p>Coming Soon... Stay tuned for chilling stories, strange events, and voices from the Ridge.</p>
+  <p>NEW EPISODES EVERY THURSDAY... Buffalo Ridge... your source for chilling stories, strange events, and voices.  Right here from up on the Ridge.</p>
+  <a href="https://www.youtube.com/@Buffalo-Ridge" target="_blank" style="text-decoration: none;">
+  <button style="
+    background-color: #FF0000;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+  ">
+    🎥 Subscribe on YouTube
+  </button>
+</a>
+
 </body>
 </html>
