--- a/index.html
+++ b/index.html
@@ -47,6 +47,19 @@
     🎥 Subscribe on YouTube
   </button>
 </a>
+<a href="https://open.spotify.com/show/4iG0SrMt0ATU8rqnAcWy3e" target="_blank" style="text-decoration: none;">
+  <button style="
+    background-color: #FF0000;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+  ">
+    🎥 Listen on Spotify
+  </button>
+</a>
 
 </body>
 </html>
