--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 </head>
 <body>
   <h1>Buffalo Ridge Podcast</h1>
-  <p>NEW EPISODES EVERY THURSDAY... Buffalo Ridge... your source for chilling stories, strange events, and voices.  Right here from up on the Ridge.</p>
+  <p>NEW EPISODES EVERY THURSDAY... Buffalo Ridge... your source for chilling stories, strange events, and voices.  
+    Right here from up on the Ridge.</p>
   <a href="https://www.youtube.com/@Buffalo-Ridge" target="_blank" style="text-decoration: none;">
   <button style="
     background-color: #FF0000;
