--- a/index.html
+++ b/index.html
@@ -48,10 +48,7 @@
     🎥 Subscribe on YouTube
   </button>
 </a>
-
-
-
-  
+<meta charset="UTF-8" />
 <a href="https://open.spotify.com/show/4iG0SrMt0ATU8rqnAcWy3e" target="_blank" style="text-decoration: none;">
   <button style="
     background-color: #FF0000;
