--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     🎥 Subscribe on YouTube
   </button>
 </a>
-<meta charset="UTF-8" />
+<div style="height: 20px;"></div>
 <a href="https://open.spotify.com/show/4iG0SrMt0ATU8rqnAcWy3e" target="_blank" style="text-decoration: none;">
   <button style="
     background-color: #FF0000;
