--- a/index.html
+++ b/index.html
@@ -49,18 +49,58 @@
   </button>
 </a>
 <div style="height: 20px;"></div>
-<a href="https://open.spotify.com/show/4iG0SrMt0ATU8rqnAcWy3e" target="_blank" style="text-decoration: none;">
-  <button style="
-    background-color: #FF0000;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    font-size: 16px;
-    cursor: pointer;
-  ">
-    🎥 Listen on Spotify
-  </button>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Buffalo Ridge Button Link</title>
+  <style>
+    body {
+      background-color: #000;
+      font-family: 'Impact', 'Arial Black', sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
+    }
+
+    .ridge-link {
+      text-decoration: none;
+    }
+
+    .ridge-button {
+      background-color: #111;
+      color: #eee;
+      border: 3px solid #444;
+      border-radius: 6px;
+      padding: 20px 60px;
+      font-size: 2em;
+      text-transform: uppercase;
+      letter-spacing: 2px;
+      text-shadow: 1px 1px 2px black;
+      box-shadow: 0 0 10px #000;
+      transition: background 0.3s, transform 0.2s;
+      cursor: pointer;
+    }
+
+    .ridge-button:hover {
+      background-color: #222;
+      transform: scale(1.05);
+    }
+  </style>
+</head>
+<body>
+
+  <!-- Replace the URL below with your actual YouTube channel link -->
+  <a href="https://www.youtube.com/channel/UCHDjvZvemkFoVgsXagJYShw" target="_blank" class="ridge-link">
+    <div class="ridge-button">Buffalo Ridge</div>
+  </a>
+
+</body>
+</html>
+
 </a>
 
 </body>
