--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
   <!-- Replace the URL below with your actual YouTube channel link -->
   <a href="https://www.youtube.com/channel/UCHDjvZvemkFoVgsXagJYShw" target="_blank" class="ridge-link">
-    <div class="ridge-button">Buffalo Ridge</div>
+    <div class="ridge-button">SUBSCRIBE ON YOUTUBE</div>
   </a>
 
 </body>
