--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
       <div class="ridge-button">About</div>
     </a>
 
-    <a href="https://example.com/contact" target="_blank" class="ridge-link">
-      <div class="ridge-button">Contact</div>
+    <a href="https://www.facebook.com/photo/?fbid=122102987132919073&set=a.122102987318919073" target="_blank" class="ridge-link">
+      <div class="ridge-button">Touch Ty's Weener</div>
     </a>
 
-    <a href="mailto:you@example.com" class="ridge-link">
+    <a href="mailto:rob.auburnviewmedia@gmail.com" class="ridge-link">
       <div class="ridge-button">Email Us</div>
     </a>
 
