--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
   <!-- Video Embed Section -->
   <div class="section">
     <h2>Watch the Show</h2>
-    <iframe width="560" height="315" src="https://youtu.be/ARvMdWtVNgQ?si=4Tx_fsytLzXBVNZO" 
+    <iframe width="560" height="315" src="https://www.youtube.com/watch?v=ARvMdWtVNgQ&t=1s" 
             title="YouTube video player" allowfullscreen></iframe>
   </div>
 
