--- a/index.html
+++ b/index.html
@@ -152,8 +152,7 @@
   <!-- Video Embed Section -->
   <div class="section">
     <h2>Watch the Show</h2>
-    <iframe width="560" height="315" src="https://www.youtube.com/watch?v=ARvMdWtVNgQ&t=1s" 
-            title="YouTube video player" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/ARvMdWtVNgQ?si=r9ZAtTNNZaGYOEsF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </div>
 
   <!-- Newsletter Signup -->
