--- a/index.html
+++ b/index.html
@@ -140,6 +140,14 @@
     </a>
   </div>
 
+    <!-- Video Embed Section -->
+  <div class="section">
+    <h2>Watch the Latest Episode</h2>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/ARvMdWtVNgQ?si=r9ZAtTNNZaGYOEsF" 
+            title="YouTube video player" allowfullscreen allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+            referrerpolicy="strict-origin-when-cross-origin"></iframe>
+  </div>
+
   <!-- Audio Player Section -->
   <div class="section">
     <h2>Listen to the Latest Episode</h2>
@@ -149,11 +157,6 @@
     </audio>
   </div>
 
-  <!-- Video Embed Section -->
-  <div class="section">
-    <h2>Watch the Show</h2>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/ARvMdWtVNgQ?si=r9ZAtTNNZaGYOEsF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-  </div>
 
   <!-- Newsletter Signup -->
   <div class="section">
