--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-
+  <title>Buffalo Ridge</title>
 
   <!-- Typewriter Font -->
   <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
@@ -13,24 +13,18 @@
       margin: 0;
       background-color: #000;
       color: #fff;
-      font-family: 'Special+Elite', monospace;
+      font-family: 'Special Elite', monospace;
       display: flex;
       flex-direction: column;
       align-items: center;
-      padding: 2rem;
+      padding: 1rem;
       text-align: center;
     }
 
     img.logo {
       height: 300px;
       width: auto;
-      margin-bottom: 2rem;
-    }
-
-    h1 {
-      font-size: 3em;
-      margin: 0 0 1rem 0;
-      text-shadow: 2px 2px 8px #000;
+      margin-bottom: 1rem;
     }
 
     p {
@@ -45,7 +39,7 @@
       gap: 20px;
       width: 100%;
       max-width: 800px;
-      margin: 2rem 0;
+      margin: 1.5rem 0;
     }
 
     .ridge-link {
@@ -73,7 +67,7 @@
     }
 
     .section {
-      margin-top: 3rem;
+      margin-top: 2rem;
       max-width: 700px;
       width: 100%;
     }
@@ -113,8 +107,7 @@
   <!-- Logo -->
   <img src="BUFFALO RIDGE 3.0.png" alt="Buffalo Ridge Logo" class="logo">
 
-  <!-- Header Text -->
-  <h1>Buffalo Ridge Podcast</h1>
+  <!-- Description -->
   <p>New episodes every Thursday... Buffalo Ridge is your source for chilling stories, strange events, and voices.</p>
   <p><strong>Right here from up on the Ridge.</strong></p>
 
@@ -140,7 +133,7 @@
     </a>
   </div>
 
-    <!-- Video Embed Section -->
+  <!-- Video Embed Section -->
   <div class="section">
     <h2>Watch the Latest Episode</h2>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/ARvMdWtVNgQ?si=r9ZAtTNNZaGYOEsF" 
@@ -156,7 +149,6 @@
       Your browser does not support the audio element.
     </audio>
   </div>
-
 
   <!-- Newsletter Signup -->
   <div class="section">
