--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <a href="https://example.com/episode-list" target="_blank" class="ridge-link">
       <div class="ridge-button">Episodes</div>
     </a>
-    <a href="https://example.com/about" target="_blank" class="ridge-link">
+    <a href="https://youtu.be/HRAJbOmm6Lk?si=sgOuRF0foGBzJJxU" target="_blank" class="ridge-link">
       <div class="ridge-button">About</div>
     </a>
     <a href="https://www.facebook.com/photo/?fbid=122102987132919073&set=a.122102987318919073" target="_blank" class="ridge-link">
