--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       <div class="ridge-button">YouTube</div>
     </a>
     <a href="https://example.com/episode-list" target="_blank" class="ridge-link">
-      <div class="ridge-button">Episodes</div>
+      <div class="ridge-button">Sounds</div>
     </a>
     <a href="https://youtu.be/HRAJbOmm6Lk?si=sgOuRF0foGBzJJxU" target="_blank" class="ridge-link">
       <div class="ridge-button">About</div>
