--- a/index.html
+++ b/index.html
@@ -137,15 +137,15 @@
   <div id="sound-section" class="section" style="display: none;">
     <h2>Sound Bites</h2>
     <div class="button-grid">
-      <button onclick="playSound('sound1')">Creepy Laugh</button>
-      <button onclick="playSound('sound2')">Wind Howl</button>
-      <button onclick="playSound('sound3')">Thunder Clap</button>
+      <button onclick="playSound('sound1')">DID YOU SEE THAT</button>
+      <button onclick="playSound('sound2')">D in my B</button>
+      <button onclick="playSound('sound3')">GUN SWIM</button>
     </div>
 
     <!-- Audio elements -->
-    <audio id="sound1" src="sounds/creepy-laugh.mp3"></audio>
-    <audio id="sound2" src="sounds/wind-howl.mp3"></audio>
-    <audio id="sound3" src="sounds/thunder-clap.mp3"></audio>
+    <audio id="sound1" src="sounds/DID YOU SEE THAT.mp3"></audio>
+    <audio id="sound2" src="sounds/D in my B.mp3"></audio>
+    <audio id="sound3" src="sounds/GUN SWIM.mp3"></audio>
   </div>
 
   <!-- Video Embed Section -->
