--- a/index.html
+++ b/index.html
@@ -104,8 +104,32 @@
 </head>
 <body>
 
-  <!-- Logo -->
-  <img src="BUFFALO RIDGE 3.0.png" alt="Buffalo Ridge Logo" class="logo">
+  <!-- Portrait Banner Row -->
+  <div style="display: flex; flex-wrap: wrap; justify-content: center; align-items: center; gap: 1rem; margin-bottom: 2rem;">
+    <div>
+      <img src="DREW.png" alt="Drew" style="height: 200px; width: auto; border-radius: 8px;">
+      <p style="margin: 0.5rem 0 0; font-size: 1em;">Drew</p>
+    </div>
+    <div>
+      <img src="STEVEN.png" alt="Steven" style="height: 200px; width: auto; border-radius: 8px;">
+      <p style="margin: 0.5rem 0 0; font-size: 1em;">Steven</p>
+    </div>
+
+    <!-- Logo -->
+    <div>
+      <img src="BUFFALO RIDGE 3.0.png" alt="Buffalo Ridge Logo" class="logo">
+    </div>
+
+    <div>
+      <img src="ROB.png" alt="Rob" style="height: 200px; width: auto; border-radius: 8px;">
+      <p style="margin: 0.5rem 0 0; font-size: 1em;">Rob</p>
+    </div>
+    <div>
+      <img src="TY.png" alt="Ty" style="height: 200px; width: auto; border-radius: 8px;">
+      <p style="margin: 0.5rem 0 0; font-size: 1em;">Ty</p>
+    </div>
+  </div>
+
 
   <!-- Description -->
   <p>New episodes every Thursday... Buffalo Ridge is your source for chilling stories, strange events, and voices.</p>
