--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
     <!-- Center Logo -->
     <div>
-      <img src="BUFFALO RIDGE 3.0.png" alt="Buffalo Ridge Logo" class="logo">
+      <img src="BUFFALO RIDGE LOGO 4.0.png" alt="Buffalo Ridge Logo" class="logo">
     </div>
 
     <!-- Right Column (Desktop) -->
